# ifri_mini_ml_lib

./: .gitignore  MinMaxScaler.py  README.md  evaluation_and_plot.py  myst.yml  pyproject.toml  regressions.py  requirements.txt  setup.py
.github/workflows/: deploy-docs.yml  deploy.yml  publish-pypi.yml  python-tests.yml
Data_preprocessing/data_preparation/: MinMaxScaler.py  MissingValueHandler.py  StandardScaler.py  standard_scaler.py
Data_preprocessing/dimensionality_reduction/: acp.py  main.py  main_pca.py  main_tsne.py  pca.py  t-sne_explication.ipynb  t_sne.py
Metrics/evaluation_metrics/: Evaluation_metrique.py  Inertia.py  evaluation_metrics.py
Metrics/fairlearn_metrics/: metrics.py
Model_selection/: Bagging.py  BayesianSearchCV.py  CrossValidation.py  GridSearchCV.py  Random_SearchCV.py  bagging.py  bayesian_searchCV.py  cross_validation.py  grid_searchCV.py  random_searchCV.py  utils.py
Neural_networks/: README.md  mlp.py
docs/: ifri_mini_ml_lib.html  index.html  search.js
tests/: test_apriori.py  test_association_rules.py  test_bagging.py  test_bayesian_search.py  test_biais_evaluation.py  test_categorical_encoder.py  test_crossval.py  test_data_adapter.py  test_data_splitter.py  test_dbscan.py  test_decision_tree.py  test_eclat.py  test_evaluation_metrics.py  test_fairness.py  test_fpgrowth.py  test_grid_search.py  test_hierarchical.py  test_inear_regression.py  test_inertia.py  test_kmeans.py  test_knn.py  test_logistic_regression.py  test_missing_value_handler.py  test_mlp.py  test_random_search.py  test_silhouette.py  test_tsne.py
(+131 files in other folders)
